[gd_scene load_steps=8 format=3 uid="uid://bhdsiv24l5m1b"]

[ext_resource type="Script" uid="uid://dmeggih4p2o84" path="res://Node/Game/Game.gd" id="1_6e2ot"]
[ext_resource type="Script" uid="uid://d8i4qk7qi425" path="res://Node/Game/BuildingHandler.gd" id="2_8v1kq"]
[ext_resource type="Script" uid="uid://c7esx0lbv3mvq" path="res://Node/Game/ArenaHandler.gd" id="2_g1w7o"]
[ext_resource type="Script" uid="uid://bdjkx32t0cint" path="res://Node/Game/EntityHandler.gd" id="3_8v1kq"]
[ext_resource type="Texture2D" uid="uid://dn8r36gpsugms" path="res://Ressources/Sprite/UI/Cursor.png" id="4_e62rc"]
[ext_resource type="Script" uid="uid://cbjdh6pkrtsw7" path="res://Node/Game/Cursor.gd" id="6_g1w7o"]
[ext_resource type="PackedScene" uid="uid://d2sc4mbovli68" path="res://Node/UI/GameUI.tscn" id="7_yq4x2"]

[node name="Game" type="Node2D" node_paths=PackedStringArray("arenaHandler", "buildingHandler", "entityHandler", "cursor")]
script = ExtResource("1_6e2ot")
arenaHandler = NodePath("ArenaHandler")
buildingHandler = NodePath("BuildingHandler")
entityHandler = NodePath("EntityHandler")
cursor = NodePath("InteractiveUI/Cursor")

[node name="ArenaHandler" type="Node2D" parent="."]
script = ExtResource("2_g1w7o")

[node name="BuildingHandler" type="Node2D" parent="." node_paths=PackedStringArray("arenaHandler")]
script = ExtResource("2_8v1kq")
arenaHandler = NodePath("../ArenaHandler")

[node name="Neutral" type="Node2D" parent="BuildingHandler"]

[node name="Team0" type="Node2D" parent="BuildingHandler"]

[node name="Team1" type="Node2D" parent="BuildingHandler"]

[node name="EntityHandler" type="Node2D" parent="." node_paths=PackedStringArray("arenaHandler")]
z_index = 2
script = ExtResource("3_8v1kq")
arenaHandler = NodePath("../ArenaHandler")

[node name="Team0" type="Node2D" parent="EntityHandler"]

[node name="Team1" type="Node2D" parent="EntityHandler"]

[node name="InteractiveUI" type="Node2D" parent="."]

[node name="Cursor" type="Sprite2D" parent="InteractiveUI" node_paths=PackedStringArray("arenaHandler")]
z_index = 1
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("4_e62rc")
script = ExtResource("6_g1w7o")
arenaHandler = NodePath("../../ArenaHandler")

[node name="Camera" type="Camera2D" parent="InteractiveUI/Cursor"]
scale = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[node name="GameUI" parent="." node_paths=PackedStringArray("arenaHandler", "buildingHandler", "entityHandler") instance=ExtResource("7_yq4x2")]
arenaHandler = NodePath("../ArenaHandler")
buildingHandler = NodePath("../BuildingHandler")
entityHandler = NodePath("../EntityHandler")

[connection signal="movedToNewTile" from="InteractiveUI/Cursor" to="GameUI" method="_on_cursor_moved_to_new_tile"]
